--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
-    "mongoose": "^8.16.1"
+    "mongoose": "^8.16.1",
+    "jsonwebtoken": "^8.5.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5"    
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
