--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.17"
+    "vue": "^3.5.17",
+    "vue-router": "^4.0.0",
+    "axios": "^0.21.1",
+    "tailwindcss": "^3.0.0"    
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
